<resources>
    <string name="app_name">MetalPlayer</string>
    <string name="backward_button_image">Backward button image</string>
    <string name="pause_button_image">Pause button image</string>
    <string name="play_button_image">Play button image</string>
    <string name="forward_button_image">Forward button image</string>
    <string name="song_info_image">song info image</string>
    <string name="song_image">Song image</string>
    <string name="notification_channel_name">Notification</string>
    <string name="notification_channel_description">Notification channel</string>
</resources>
