<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/top_color"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/song_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/song_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/song_info_image" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@mipmap/base"
            android:padding="30dp">

            <ImageView
                android:id="@+id/backward_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/backward_button_image"
                android:src="@mipmap/backward_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/pause_button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/pause_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/pause_button_image"
                android:src="@mipmap/pause_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/play_button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/backward_button"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/play_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/play_button_image"
                android:src="@mipmap/play_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/forward_button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/pause_button"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/forward_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/forward_button_image"
                android:src="@mipmap/fordward_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/play_button"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>